@@ -534,7 +534,7 @@ funcname_thread_add_timer (struct thread_master *m,
 
   assert (m != NULL);
 
-  trel.tv_sec += timer;
+  trel.tv_sec = timer;
   trel.tv_usec = 0;
 
   return funcname_thread_add_timer_timeval (m, func, arg, &trel, funcname);
@@ -552,8 +552,8 @@ funcname_thread_add_timer_msec (struct thread_master *m,
 
   timer = 1000*timer; /* milli -> micro */
 
-  trel.tv_sec += timer / TIMER_SECOND_MICRO;
-  trel.tv_usec += (timer % TIMER_SECOND_MICRO);
+  trel.tv_sec = timer / TIMER_SECOND_MICRO;
+  trel.tv_usec = (timer % TIMER_SECOND_MICRO);
 
   return funcname_thread_add_timer_timeval (m, func, arg, &trel, funcname);
 }
